--- a/html/top100.html
+++ b/html/top100.html
@@ -220,7 +220,7 @@ img.emoji {
                 <a href="http://prof.ict.ac.cn/BigDataBench/"
                    title="BigDataBench" rel="home">
 
-                    BigDataBench100</a></h1>
+                    BigData100</a></h1>
 
             <h2 class="site-description" style="margin-left:160px;">Benchmarking and Ranking Big Data Systems</h2>
         </hgroup>
